objects/Additional_Charge__c.object
<CustomObject>
    <description>Additional charges have a many-to-one relationship with a Ship-To.</description>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CW_Upload_DateTime__c</fullName>
        <label>CW Upload Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Charge_Code__c</fullName>
        <label>Charge Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Description__c</fullName>
        <label>Charge Description</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXT_Additional_Charge__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>External Id field for Additional Charge</inlineHelpText>
        <label>Additional Charge</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <formula>Ship_To__r.RH_Order_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <label>Sequence Number</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To__c</fullName>
        <label>Ship To</label>
        <referenceTo>Ship_To__c</referenceTo>
        <relationshipName>Additional_Charges</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Ship_to_Number__c</fullName>
        <formula>Ship_To__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship to Number</label>
        <type>Text</type>
    </fields>
    <label>Additional Charge</label>
    <nameField>
        <displayFormat>AC-{000000}</displayFormat>
        <label>Additional Charge Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Additional Charges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>